# auto-research

./: .dockerignore  .gitignore  CODEOWNERS  README.md  pyproject.toml
docs/: parallelism.md
examples/: build_walkthrough.py  build_walkthrough_aws.py  walkthrough.ipynb  walkthrough_aws.ipynb
examples/gbdt-ohlcv/: data.csv  eval.py  gen_data.py  spec.yaml  train.py
infra/: DEPLOY.md
infra/docker/: Dockerfile  entrypoint.py
infra/terraform/envs/dev/: main.tf
infra/terraform/modules/compute/: main.tf
infra/terraform/modules/iam/: main.tf
infra/terraform/modules/orchestration/: asl.json.tftpl  main.tf
infra/terraform/modules/secrets/: main.tf
infra/terraform/modules/storage/: main.tf
tests/: test_decide.py  test_local_store.py  test_loop.py  test_loop_golden.py  test_loop_parallel.py  test_proposer_batch_default.py  test_recipe_scripts.py  test_spec.py
tests/aws/: README.md  conftest.py  test_handlers.py  test_integration_sandbox.py  test_orchestrator_asl.py  test_store_s3ddb.py  test_submit.py
tests/aws/golden/: asl_default.json
tests/golden/: k1_ledger.json
