[project]
name = "auto-research"
version = "0.1.0"
description = "Enterprise-grade Karpathy autoresearch for quant analysts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50.0",
    "nbformat>=5.10.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
examples = [
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "jupyter>=1.1.0",
]
aws = [
    "boto3>=1.35.0",
    "botocore>=1.35.0",
]
dev = [
    "pytest>=8.0.0",
    "moto[s3,dynamodb,secretsmanager,stepfunctions]>=5.0.0",
    "boto3>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/auto_research", "packages/auto_research_aws"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages"]
markers = [
    "integration: marks tests that require a real AWS sandbox (skipped unless AWS_AUTORESEARCH_INTEGRATION=1)",
]
